force-app/main/default/objects/Geospatial_Information__c/Geospatial_Information__c.object-meta.xml
<CustomObject>
    <label>Geospatial Information</label>
    <nameField>
        <label>Layer</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geospatial Information</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>