force-app/main/default/objects/Geospatial_Information__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Geospatial Information</relationshipLabel>
    <relationshipName>Geospatial_Information</relationshipName>
    <type>Lookup</type>
</CustomField>