force-app/main/default/objects/Geospatial_Information__c/fields/Date_Uploaded_to_GPMS__c.field-meta.xml
<CustomField>
    <fullName>Date_Uploaded_to_GPMS__c</fullName>
    <label>Date Uploaded to GPMS</label>
    <type>Date</type>
</CustomField>