force-app/main/default/objects/Geospatial_Information__c/fields/Geospatial_Id__c.field-meta.xml
<CustomField>
    <fullName>Geospatial_Id__c</fullName>
    <description>Identifier for each Geospatial record</description>
    <displayFormat>{00000}</displayFormat>
    <label>Geospatial Id</label>
    <type>AutoNumber</type>
</CustomField>