force-app/main/default/objects/Geospatial_Information__c/fields/Layer_Id__c.field-meta.xml
<CustomField>
    <fullName>Layer_Id__c</fullName>
    <label>Layer Id</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>