force-app/main/default/objects/Geospatial_Information__c/fields/MuleExternalId__c.field-meta.xml
<CustomField>
    <fullName>MuleExternalId__c</fullName>
    <description>This field is used as a Mule upsert key for geospatial info</description>
    <externalId>true</externalId>
    <label>MuleExternalId</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>