force-app/main/default/objects/Geospatial_Information__c/fields/Oracle_ID__c.field-meta.xml
<CustomField>
    <fullName>Oracle_ID__c</fullName>
    <externalId>true</externalId>
    <label>Oracle ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>