force-app/main/default/objects/Geospatial_Information__c/fields/Refresh_Comment__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Comment__c</fullName>
    <label>Refresh Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>