force-app/main/default/objects/Geospatial_Information__c/fields/Refresh_Status__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Status__c</fullName>
    <label>Refresh Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>